# CanvasPads

./: .gitattributes  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
crates/canvaspads/: Cargo.toml
crates/canvaspads-web/: Cargo.toml  build+optimize.sh  build.sh
crates/canvaspads-web/src/: lib.rs
crates/canvaspads/src/: app.rs
crates/canvaspads/src/render/: driver.rs
crates/canvaspads/src/render/driver/: wgpu.rs
web/: index.html  package.json  tsconfig.json
web/src/: main.ts  main.tsx
web/src/editor/: MainWindow.tsx
web/src/editor/components/layouts/: EditorWindow.tsx
web/src/wasm/: canvaspads_web.d.ts  canvaspads_web.js  canvaspads_web_bg.wasm  canvaspads_web_bg.wasm.d.ts
