[package]
name = "canvaspads-web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
canvaspads = { path = "../canvaspads" }
wasm-bindgen = { workspace = true }
web-sys = { version = "0.3.76", features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
] }
